# ploscope-stack

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
services/backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build_cython.py  config.py  custom_profiles.json  docker-compose.yml  env.development  env.example  poetry.toml  pyproject.toml  run-docker.sh
services/backend/.cursor/rules/rules/: coding-rules.mdc  poker-rules.mdc
services/backend/.github/workflows/: build-and-push-images.yml  dependency-updates.yml  deploy.yml  performance.yml  pr-deploy.yml  release.yml  security.yml
services/backend/protos/: README.md  auth.proto  common.proto  core.proto  hand_history.proto  job.proto  migrate.sh  solver.proto  subscription.proto
services/backend/scripts/: build_protos.py  generate_protos.py  skip-pre-commit.sh
services/backend/src/backend/: core_compatibility.py  database.py  grpc_main.py  init_db.py  main.py  metrics.py
services/backend/src/backend/models/: __init__.py  enums.py  hand_history.py  job.py  parsed_hand.py  solver_solution.py  spot.py  user.py  user_credit.py  user_session.py
services/backend/src/backend/protos/: __init__.py  auth_pb2.py  auth_pb2_grpc.py  common_pb2_grpc.py  core_pb2.py  core_pb2_grpc.py  hand_history_pb2.py  hand_history_pb2_grpc.py  job_pb2_grpc.py  solver_pb2.py  solver_pb2_grpc.py  subscription_pb2_grpc.py
services/backend/src/backend/routes_grpc/: __init__.py  auth_service.py  core_service.py  job_service.py  shared_logic.py  solver_service.py  utils.py
services/backend/src/backend/routes_http/: auth_routes.py  core_routes.py  discourse_routes.py  docs_routes.py  hand_history_routes.py  job_routes.py  metrics_routes.py  solver_routes.py  spot_routes.py  subscription_routes.py  telemetry_routes.py
services/backend/src/backend/scripts/: create_test_job.py  create_test_user.py
services/backend/src/backend/services/: job_service.py  rabbitmq_service.py  telemetry_service.py  websocket_service.py
services/backend/src/backend/utils/: __init__.py  auth_utils.py  rate_limiter.py
services/backend/src/protos/: auth_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  core_pb2_grpc.py  hand_history_pb2_grpc.py  job_pb2.py  job_pb2_grpc.py  solver_pb2_grpc.py  subscription_pb2.py  subscription_pb2_grpc.py
services/backend/tests/: conftest_ci.py  conftest_integration.py  conftest_unit.py
services/backend/tests/integration/: test_redis_authentication_integration.py
services/backend/tests/unit/: conftest.py  test_core_dto_integration.py  test_core_routes.py  test_dto_service_integration.py  test_environment_detection.py  test_metrics.py  test_redis_authentication.py
services/celery-worker/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  BACKEND_INTEGRATION.md  Dockerfile  Makefile  README.md  docker-compose-test.yml  docker-compose.cloud.yml  docker-compose.localdev.yml  env.development  env.example  env.test  health_check.py  pip.conf  poetry.toml  pyproject.toml  setup.py  start.sh
services/celery-worker/.github/workflows/: build-and-push-images.yml  dependency-updates.yml  deploy.yml  pr-deploy.yml  release.yml  security.yml
services/celery-worker/src/celery_worker/: __init__.py  celery_app.py  celery_app.pyx.disabled  main.py  metrics.py  metrics_server.py  rate_limiter.py  redis.py  tasks.py  tasks.pyx.disabled
services/celery-worker/src/celery_worker/models/: job.py  parsed_hand.py  spot.py
services/celery-worker/src/celery_worker/services/: database_service.py  rabbitmq_service.py
services/celery-worker/src/scripts/: build_binary.py  build_cython.py  build_poetry.py  health_check.sh  start.sh
services/celery-worker/tests/: test_celery_app.py  test_health_check.sh  test_metrics.py  test_tasks.py
services/celery-worker/tests/integration/: README.md  __init__.py  test_database.py  test_database_health_check.py  test_rabbitmq_health_check.py  test_redis_health_check.py
services/core/: .pre-commit-config.yaml  Makefile  PRE_COMMIT_SETUP.md  README.md  env.development  env.example  pip.conf  pyproject.toml
services/core/.github/workflows/: push-artifacts.yml  release.yml
services/core/scripts/: setup-dev.sh
services/core/src/core/: __init__.py
services/core/src/core/equity/: __init__.py  calculator.py
services/core/src/core/services/: __init__.py  card_service.py  celery_service.py  equity_calculator.py  equity_service.py  equity_simulation.py  game_utils.py  hand_history_parser.py  player_profiles.py  rabbitmq_service.py  showdown_service.py  solver_engine.py  websocket_service.py
services/core/src/core/solver/: __init__.py  engine.py
services/core/src/core/utils/: __init__.py  (+5 more)
services/core/tests/: conftest.py  test_basic.py  test_enhanced_logging.py  test_equity_hand_categories.py  test_hand_category_thresholds.py  test_hand_history_parser.py  test_logging_utils.py  test_player_profiles.py  test_rabbitmq_service.py  test_showdown_service.py  test_websocket_service.py
services/database/: .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.development  env.py  pyproject.toml
services/database/.github/workflows/: build-and-test.yml  deploy.yml  release.yml
services/database/scripts/: alembic-check.sh
services/database/versions/: 001_create_users_table.py  002_add_async_job_system.py  003_bridge_migration.py  004_create_spots_table.py  005_create_hand_histories_table.py  006_create_parsed_hands_table.py  007_create_solver_solutions_table.py  008_add_beta_user_field.py  009_create_user_sessions_table.py
services/rabbitmq/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.development  env.local  init_rabbitmq_queues.py  pyproject.toml  rabbitmq.conf
services/rabbitmq/.github/workflows/: deploy.yml  rabbitmq-ci.yml  release.yml
services/rabbitmq/scripts/: bootstrap-rabbitmq.sh  cert-monitor.sh  entrypoint-wrapper.sh  verify_rabbitmq_queues.py  verify_rabbitmq_setup.py
(+726 files in other folders)
